(general) Fix logo on mobile

--- a/astrobin/static/astrobin/scss/nav.scss
+++ b/astrobin/static/astrobin/scss/nav.scss
@@ -577,7 +577,7 @@ body.full {
   }
 }
 
-.brand img {
+.brand img, .brand-mobile img {
   height: 25px;
   margin-top: -7px;
 }
